--- a/NORTA.ipynb
+++ b/NORTA.ipynb
@@ -164,7 +164,7 @@
     "                            break\n",
     "                    self.C[dim1,dim2] = r\n",
     "                    self.C[dim2,dim1] = r\n",
-    "        print(\"Calculated correlataion:\\n\",self.C)\n",
+    "        print(\"Calculated correlation:\\n\",self.C)\n",
     "        self._generate_L()\n",
     "    \n",
     "    def _generate_correlation_matrix(self,data,porcentaje = 0.1, muestra = 10000):\n",
