--- a/Tarea 2 b).ipynb
+++ b/Tarea 2 b).ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,16 @@
       "Calculated correlataion:\n",
       " [[1.  0.5]\n",
       " [0.5 1. ]]\n",
-      "[[15. 14.]]\n"
+      "[[20. 18.]]\n",
+      "[[8. 8.]]\n",
+      "[[12. 10.]]\n",
+      "[[18. 21.]]\n",
+      "[[19. 18.]]\n",
+      "[[16. 11.]]\n",
+      "[[ 9. 13.]]\n",
+      "[[17. 20.]]\n",
+      "[[20. 18.]]\n",
+      "[[17. 15.]]\n"
      ]
     }
    ],
@@ -198,8 +207,9 @@
     "        Gen.set_marginal(SANglobal.distribution[vertice]['func'],SANglobal.distribution[vertice]['params'])\n",
     "    R = [[1, correlations['corr']],[correlations['corr'], 1]] # sólo efectivo para 2 dimensiones\n",
     "    Gen.set_correlation_matrix(R)\n",
-    "muestra = Gen.generate_sample() #va a tener dos dimensiones la primera de b, la segunda de c\n",
-    "print(muestra)"
+    "for i in range(10):\n",
+    "    muestra = Gen.generate_sample() #va a tener dos dimensiones la primera de b, la segunda de c\n",
+    "    print(muestra)"
    ]
   },
   {
