--- a/Tarea 2 b).ipynb
+++ b/Tarea 2 b).ipynb
@@ -8491,12 +8491,26 @@
     }
    ],
    "source": [
-    "plt.hist(finishtimes, bins = 30, density = True, cumulative=True)\n",
-    "plt.hist(finishtimes2, bins = 30, density = True, cumulative=True)  \n",
+    "p1 = plt.hist(finishtimes, bins = 30, density = True, cumulative=True)\n",
+    "p2 = plt.hist(finishtimes2, bins = 30, density = True, cumulative=True)  \n",
+    "\n",
+    "plt.title('Comparación tiempos de completación')\n",
+    "plt.ylabel('Probabilidad Acumulada')\n",
+    "plt.xticks(ind, ('G1', 'G2', 'G3', 'G4', 'G5'))\n",
+    "plt.yticks(np.arange(0, 81, 10))\n",
+    "plt.legend((p1[0], p2[0]), ('Correlated', 'Non Correlated'))\n",
+    "\n",
     "plt.show()\n",
     "\n",
-    "plt.hist(finishtimes, bins = 30, density = True, cumulative=False) \n",
-    "plt.hist(finishtimes2, bins = 30, density = True, cumulative=False) \n",
+    "p1 = plt.hist(finishtimes, bins = 30, density = True, cumulative=False) \n",
+    "p2 = plt.hist(finishtimes2, bins = 30, density = True, cumulative=False) \n",
+    "\n",
+    "plt.ylabel('Scores')\n",
+    "plt.title('Scores by group and gender')\n",
+    "plt.xticks(ind, ('G1', 'G2', 'G3', 'G4', 'G5'))\n",
+    "plt.yticks(np.arange(0, 81, 10))\n",
+    "plt.legend((p1[0], p2[0]), ('Correlated', 'Non Correlated'))\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -8504,8 +8518,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se ven algunas diferencias claras, por ejemplo que en este caso el color marcado con azul, que es el caso con la correlación se demorá efectivamente más, como"
+    "Se ven algunas diferencias claras, por ejemplo que en este caso el color marcado con azul, que es el caso con la correlación se demorá efectivamente más, y tiene combinaciones no presentes en el caso sin correlación"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
