--- a/Tarea 2 b).ipynb
+++ b/Tarea 2 b).ipynb
@@ -51,7 +51,14 @@
     "        evnt = [e.event for e in myEvent]\n",
     "        yield self.env.all_of(evnt)\n",
     "        print(\"The activating event(s) were %s at time %f\" %([x.name for x in myEvent], self.env.now))\n",
-    "        tis = self.generate_observation()\n",
+    "        if node==0:\n",
+    "            tis =random.expovariate(3.0) \n",
+    "        if node==1:\n",
+    "            tis = random.uniform(1, 3)\n",
+    "        if node==2:\n",
+    "            tis = random.triangular(1,3,4)\n",
+    "        if node==3:\n",
+    "            tis = random.expovariate(2.0)  \n",
     "        yield self.env.timeout(tis)\n",
     "        finishtime = self.env.now\n",
     "        if finishtime > SANglobal.finishtime:\n",
@@ -8527,9 +8534,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py35]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-py35-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
