--- a/Tarea 2 c).ipynb
+++ b/Tarea 2 c).ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "class ActivityProcess(object):\n",
-    "    def __init__(self, env, name):\n",
+    "    def __init__(self, env, name, tolba = []):\n",
     "        self.env = env\n",
     "        self.name = name\n",
     "        \n",
@@ -107,7 +107,8 @@
     "finishtimes = []\n",
     "for rep in range(1000):\n",
     "    SANglobal.finishtime = 0\n",
-    "    env = simpy.Environment()\n",
+    "    env = simpy.Environment() #ambiente de simpy creado\n",
+    "    tolba = simpy.Resource(env, capacity=1) #Creamos nuestro recurso tolba con capacidad 1\n",
     "    SANglobal.F.nodecomplete= []\n",
     "    for i in range(len(SANglobal.F.nodes())):\n",
     "        eventname = 'Complete%1d' % i\n",
